fix: style word-wrap

--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -82,6 +82,8 @@
   margin: 0;
   padding-right: 5px;
   margin-right: auto;
+  max-width: 480px;
+  word-wrap: break-word;
 }
 
 .todo-task:hover {
